; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mp.c_cause_ast_check.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_mp.c_cause_ast_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@MP_AST = common dso_local global i32 0, align 4
@ASYNC = common dso_local global i32 0, align 4
@DBG_MACH_SCHED = common dso_local global i32 0, align 4
@MACH_REMOTE_AST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cause_ast_check(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i32 (...) @cpu_number()
  %9 = icmp ne i32 %7, %8
  br i1 %9, label %10, label %20

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @MP_AST, align 4
  %13 = load i32, i32* @ASYNC, align 4
  %14 = call i32 @i386_signal_cpu(i32 %11, i32 %12, i32 %13)
  %15 = load i32, i32* @DBG_MACH_SCHED, align 4
  %16 = load i32, i32* @MACH_REMOTE_AST, align 4
  %17 = call i32 @MACHDBG_CODE(i32 %15, i32 %16)
  %18 = load i32, i32* %3, align 4
  %19 = call i32 @KERNEL_DEBUG_CONSTANT(i32 %17, i32 %18, i32 1, i32 0, i32 0, i32 0)
  br label %20

20:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @cpu_number(...) #1

declare dso_local i32 @i386_signal_cpu(i32, i32, i32) #1

declare dso_local i32 @KERNEL_DEBUG_CONSTANT(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @MACHDBG_CODE(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
